# TAK-simulator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  build.py  format.bat  format.sh  pyproject.toml  run_proto.ps1  test.txt
.github/workflows/: ci.yml
examples/: cap_the_flag.json  scenario.json
scenarios/: cap_the_flag.json
src/tak_simulator/: cli.py  client.py  config.py  cot_event.py  emulator.py  local_ai.py  logging_conf.py  main.py  message.py  network_handler.py  publish_(depr).py  scenario.py  scenario_scheduler.py  sender.py  simulator.py  tak.py  test.py  time_keeper.py  uid.py  util.py  v1.py  xml_encoder.py  xml_parse.py
src/tak_simulator/network/: multicast.py  network_manager.py  network_user.py  server.py
src/tak_simulator/proto/: __init__.py
src/tak_simulator/ui/: __init__.py  app.py  detail_view.py  list_view.py  load_view.py  log_view.py  time_view.py
src/tak_simulator/wire/: __init__.py  exceptions.py  models.py  protocol.py  v0.py  v1.py
tests/: test_ai.py  test_emulator_integration.py  test_scenario_scheduler.py  test_simulator_integration.py  test_time_keeper.py  test_uid.py  test_xml_encode.py  test_xml_parse.py
tests/wire/: test_v0.py  test_v1.py
